Utils: player selectors changing